Fixed alignment

--- a/css/sites/blogs.scss
+++ b/css/sites/blogs.scss
@@ -16,13 +16,17 @@
 .blog-showcase h1 {
   text-align: center;
 }
-.blog-showcase > * {
+
+.blog-showcase ul {
   margin-right: var(--side-content-offset);
   margin-left: var(--side-content-offset);
 }
-.blog-showcase img {
+
+.blog-showcase > img {
   max-width: 90vw;
   max-height: 90vh;
+  display: flex;
+  margin: auto;
 }
 
 .blog-contents-items > * {
